--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cdk": "^20.0.0",
     "@angular/common": "^20.3.9",
     "@angular/compiler": "^20.2.0",
     "@angular/core": "^20.2.0",
@@ -31,8 +32,10 @@
     "@angular/platform-server": "^20.2.0",
     "@angular/router": "^20.2.0",
     "@angular/ssr": "^20.2.1",
+    "chart.js": "^4.5.1",
     "date-fns": "^4.1.0",
     "express": "^5.1.0",
+    "ng2-charts": "^4.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
